Refactored code with Promises and async/await to remove callback hell

--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,5 @@
     "page": "options.html",
     "open_in_tab": false
   },
-  "permissions": ["history", "storage"]
+  "permissions": ["history", "storage", "bookmarks"]
 }
