--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "/pages/popup/popup.html",
     "default_icon": {
       "16": "/images/icon_16.png",
       "32": "/images/icon_32.png",
@@ -19,7 +19,7 @@
     "128": "/images/icon_128.png"
   },
   "options_ui": {
-    "page": "options.html",
+    "page": "/pages/options/options.html",
     "open_in_tab": false
   },
   "permissions": ["history", "storage", "bookmarks"]
